@@ -1,3 +1,7 @@
+2009-07-24  higepon  <higepon@users.sourceforge.jp>
+
+        * Profiler shows a correct name for callable object.
+
 2009-07-23  higepon  <higepon@users.sourceforge.jp>
 
         * eqv? and equal? now guarantee #t when given two NaNs (unspecified by R6RS).
